--- a/index.scss
+++ b/index.scss
@@ -1,19 +1,42 @@
 @import './foundation/mdc-checkbox/mdc-checkbox.scss';
+@import './foundation/mdc-list/mdc-list.scss';
+
+* {
+  box-sizing: border-box;
+}
 
 html, body {
   height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
   display: flex;
-  justify-content: center;
-  align-items: center;
   font-family: 'Raleway', sans-serif;
 }
 
-section {
-  margin: 48px;
-  height: 160px;
+h2 {
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
 }
 
 h4 {
   font-weight: normal;
   font-size: 14px;
+}
+
+.framework-example {
+  width: 100%;
+  height: 100%;
+  padding: 18px;
+}
+
+.framework-example + .framework-example {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.component-demo {
+  margin-top: 42px;
 }
